Bug 160306 - Pop-up notes containing the character "<" are not correctly shown
Summary: Pop-up notes containing the character "<" are not correctly shown
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.6.3
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-04-03 11:00 UTC by albert
Modified: 2008-04-03 13:06 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
InLine Note ToolTip (256.28 KB, image/png)
2008-04-03 12:12 UTC, albert
Details

Note You need to log in before you can comment on or make changes to this bug.
Description albert 2008-04-03 11:00:11 UTC
Version:           0.6.3 (using Devel)
Installed from:    Compiled sources

If you insert, in a document, a note containing the character "<" only the part of string before "<" is actually shown in the pop-up. With respect to bug 159641, now, the part of the string after "<" isn't lost when you close the document.
Comment 1 Pino Toscano 2008-04-03 11:05:59 UTC
Either a duplicate of bug 159641, or please explain better.
Comment 2 albert 2008-04-03 11:34:33 UTC
When the mouse hovers over a pop-up note containing the character "<", the tooltip    shows only the part of the text before "<". The same thing happens for inline notes. 
Comment 3 Pino Toscano 2008-04-03 11:42:32 UTC
> The same thing happens for inline notes.

No, inline notes work.
Comment 4 Pino Toscano 2008-04-03 11:52:34 UTC
SVN commit 793231 by pino:

Backport: properly escape rich text in html-ish tooltips.

CCBUG: 160306


 M  +4 -1      guiutils.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=793231
Comment 5 Pino Toscano 2008-04-03 11:52:34 UTC
SVN commit 793230 by pino:

Properly escape rich text in html-ish tooltips.

BUG: 160306


 M  +4 -1      guiutils.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=793230
Comment 6 albert 2008-04-03 12:12:52 UTC
Created attachment 24162 [details]
InLine Note ToolTip

> No, inline notes work

If you don't believe me, please, watch this shot.
Comment 7 Pino Toscano 2008-04-03 12:22:03 UTC
Please note that I actually quoted a really small part of your phrase, that as now you are explaining it, it is *exactly* what you said previously.
That is called "tooltip", and it is *actually* fixed by my commit.

Thanks for the trust.
Comment 8 albert 2008-04-03 13:06:04 UTC
When I wrote: "the same thing happens for inline notes", I intended to say: "the same thing happens for the tooltip over an inline note. For that reason, your answer "No, inline notes work" might be interpreted as "No, tooltips over inline notes work". This induced me to reply.
I wonder how I can convince you that I trust you completely.