Properly escape rich text in html-ish tooltips.

BUG: 160306

svn path=/trunk/KDE/kdegraphics/okular/; revision=793230